--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,7 @@
 
         <!-- SEO & Metadata (handled by jekyll-seo-tag) -->
         {% seo %}
+        <meta name="keywords" content="{{ site.keywords }}">
 
         <meta name="theme-color" content="#C5A059">
         <meta name="author" content="Oepicus">
