Moved js files locally

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,11 +67,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
         <!-- Tailwind CSS -->
-        <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio"></script>
+        <script src="/assets/tailwind.js"></script>
 
         <!-- Icons -->
-        <!-- <script src="https://unpkg.com/lucide@latest"></script> -->
-        <script src="https://unpkg.com/lucide@0.562.0/dist/umd/lucide.min.js"></script>
+        <script src="/assets/lucide.js"></script>
         <script>
             tailwind.config = {
                 theme: {
